# SeekVideo

./: .gitignore  CMakeLists.txt  Makefile  README.md
src/: seekware-video.c
